Fix the “forward message” icon in dark mode

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -742,3 +742,8 @@ html.dark-mode ._3v_o ._55r1 {
 html.dark-mode ._3v_o ._55r1::-webkit-input-placeholder {
 	color: var(--base-thirty) !important;
 }
+
+/* Forward message icon */
+html.dark-mode ._2u_d a {
+	filter: invert(1);
+}
